# middleware/validate.js
@@ -24,6 +24,26 @@ const saveRosterMember = (req, res, next) => {
   });
 };
 
+const saveSchedule = (req, res, next) => {
+  const validationRule = {
+    date: 'required|string',
+    opponent: 'required|string',
+    location: 'required|string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
 module.exports = {
-  saveRosterMember
+  saveRosterMember,
+  saveSchedule
 };
