# routes/index.js
@@ -3,5 +3,6 @@ const router = express.Router();
 
 router.use('/', require('./swagger'));
 router.use('/rosters', require('./rosters'));
+router.use('/schedules', require('./schedule'));
 
 module.exports = router;
